--- a/FRONTEND/client/package.json
+++ b/FRONTEND/client/package.json
@@ -14,7 +14,9 @@
     "bootstrap": "^5.3.2",
     "element-plus": "^2.4.4",
     "js-cookie": "^3.0.5",
+    "pinia": "^2.1.7",
     "vue": "^3.3.11",
+    "vue-recaptcha": "^3.0.0-alpha.6",
     "vue-router": "^4.2.5",
     "yup": "^1.3.3"
   },
